--- a/src/Discord.Net.SlashCommands/Discord.Net.SlashCommands.csproj
+++ b/src/Discord.Net.SlashCommands/Discord.Net.SlashCommands.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Version>3.0.0-dev-SlashCommands</Version>
+    <Version>3.0.0-dev-dev</Version>
     <Company>Discord.Net Contributors</Company>
     <Authors>Discord.Net Contributors</Authors>
   </PropertyGroup>
