--- a/src/Discord.Net/Discord.Net.nuspec
+++ b/src/Discord.Net/Discord.Net.nuspec
@@ -19,6 +19,7 @@
             <dependency id="Discord.Net.Labs.WebSocket" version="3.1.7$suffix$" />
             <dependency id="Discord.Net.Labs.Commands" version="3.1.7$suffix$" />
             <dependency id="Discord.Net.Labs.Webhook" version="3.1.7$suffix$" />
+            <dependency id="Discord.Net.Labs.Interactions" version="3.1.7$suffix$" />
         </group>      
         <group targetFramework="net461">
             <dependency id="Discord.Net.Labs.Core" version="3.1.7$suffix$" />
@@ -26,6 +27,7 @@
             <dependency id="Discord.Net.Labs.WebSocket" version="3.1.7$suffix$" />
             <dependency id="Discord.Net.Labs.Commands" version="3.1.7$suffix$" />
             <dependency id="Discord.Net.Labs.Webhook" version="3.1.7$suffix$" />
+            <dependency id="Discord.Net.Labs.Interactions" version="3.1.7$suffix$" />
         </group>       
         <group targetFramework="netstandard2.0">
             <dependency id="Discord.Net.Labs.Core" version="3.1.7$suffix$" />
@@ -33,6 +35,7 @@
             <dependency id="Discord.Net.Labs.WebSocket" version="3.1.7$suffix$" />
             <dependency id="Discord.Net.Labs.Commands" version="3.1.7$suffix$" />
             <dependency id="Discord.Net.Labs.Webhook" version="3.1.7$suffix$" />
+            <dependency id="Discord.Net.Labs.Interactions" version="3.1.7$suffix$" />
         </group>
 		<group targetFramework="netstandard2.1">
             <dependency id="Discord.Net.Labs.Core" version="3.1.7$suffix$" />
@@ -40,6 +43,7 @@
             <dependency id="Discord.Net.Labs.WebSocket" version="3.1.7$suffix$" />
             <dependency id="Discord.Net.Labs.Commands" version="3.1.7$suffix$" />
             <dependency id="Discord.Net.Labs.Webhook" version="3.1.7$suffix$" />
+            <dependency id="Discord.Net.Labs.Interactions" version="3.1.7$suffix$" />
         </group>
     </dependencies>
   </metadata>
