--- a/docs/guides/toc.yml
+++ b/docs/guides/toc.yml
@@ -1,15 +1,42 @@
 - name: Introduction
   topicUid: Guides.Introduction
-- name: "Working with Guild Events"
+- name: Getting Started
+  items:
+    - name: Installation
+      topicUid: Guides.GettingStarted.Installation
+      items:
+        - name: Nightly Builds
+          topicUid: Guides.GettingStarted.Installation.Nightlies
+        - name: Labs Builds (Experimental)
+          topicUid: Guides.GettingStarted.Installation.Labs
+    - name: Your First Bot
+      topicUid: Guides.GettingStarted.FirstBot
+    - name: Terminology
+      topicUid: Guides.GettingStarted.Terminology
+- name: Basic Concepts
+  items:
+    - name: Logging Data
+      topicUid: Guides.Concepts.Logging
+    - name: Working with Events
+      topicUid: Guides.Concepts.Events
+    - name: Managing Connections
+      topicUid: Guides.Concepts.ManageConnections
+    - name: Entities
+      topicUid: Guides.Concepts.Entities
+- name: Working with Message Commands
   items:
     - name: Introduction
-      topicUid: Guides.GuildEvents.Intro
-    - name: Creating Events
-      topicUid: Guides.GuildEvents.Creating
-    - name: Getting Event Users
-      topicUid: Guides.GuildEvents.GettingUsers
-    - name: Modifying Events
-      topicUid: Guides.GuildEvents.Modifying
+      topicUid: Guides.Commands.Intro
+    - name: TypeReaders
+      topicUid: Guides.Commands.TypeReaders
+    - name: Named Arguments
+      topicUid: Guides.Commands.NamedArguments
+    - name: Preconditions
+      topicUid: Guides.Commands.Preconditions
+    - name: Dependency Injection
+      topicUid: Guides.Commands.DI
+    - name: Post-execution Handling
+      topicUid: Guides.Commands.PostExecution
 - name: Working with Slash commands
   items:
     - name: Introduction
@@ -30,14 +57,16 @@
       topicUid: Guides.SlashCommands.BulkOverwrite
 - name: Working with Context commands
   items:
+    - name: Introduction
+      topicUid: Guides.ContextCommands.Intro
     - name: Creating Context Commands
       topicUid: Guides.ContextCommands.Creating
     - name: Receiving Context Commands
       topicUid: Guides.ContextCommands.Reveiving
 - name: Working with Message Components
   items:
-    - name: Getting started
-      topicUid: Guides.MessageComponents.GettingStarted
+    - name: Introduction
+      topicUid: Guides.MessageComponents.Intro
     - name: Responding to Components
       topicUid: Guides.MessageComponents.Responding
     - name: Buttons in depth
@@ -46,3 +75,19 @@
       topicUid: Guides.MessageComponents.SelectMenus
     - name: Advanced Concepts
       topicUid: Guides.MessageComponents.Advanced
+- name: Guild Events
+  items:
+    - name: Introduction
+      topicUid: Guides.GuildEvents.Intro
+    - name: Creating Events
+      topicUid: Guides.GuildEvents.Creating
+    - name: Getting Event Users
+      topicUid: Guides.GuildEvents.GettingUsers
+    - name: Modifying Events
+      topicUid: Guides.GuildEvents.Modifying
+- name: Emoji
+  topicUid: Guides.Emoji
+- name: Voice
+  topicUid: Guides.Voice.SendingVoice
+- name: Deployment
+  topicUid: Guides.Deployment
