--- a/src/Discord.Net.Interactions/Discord.Net.Interactions.csproj
+++ b/src/Discord.Net.Interactions/Discord.Net.Interactions.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <Import Project="../../Discord.Net.targets" />
   <Import Project="../../StyleAnalyzer.targets" />
   <PropertyGroup>
@@ -19,9 +19,6 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="5.0.0" />
     <PackageReference Include="System.Collections.Immutable" Version="5.0.0" />
-    <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0"  Condition="'$(TargetFramework)' == 'net461'"/>
-    <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0"  Condition="'$(TargetFramework)' == 'netstandard2.0'"/>
-    <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0"  Condition="'$(TargetFramework)' == 'netstandard2.1'"/>
     <PackageReference Include="System.Reactive" Version="5.0.0" />
   </ItemGroup>
 
